--- a/src/pages/blog/markdown-style-guide.mdx
+++ b/src/pages/blog/markdown-style-guide.mdx
@@ -29,9 +29,10 @@ Itatur? Quiatae cullecum rem ent aut odis in re eossequodi nonsequ idebis ne sap
 
 ![This is a placeholder image description](/placeholder-social.jpg)
 
+
 ## Blockquotes
 
-The blockquote element represents content that is quoted from another source, optionally with a citation which must be within a `footer` or `cite` element, and optionally with in-line changes such as annotations and abbreviations.
+The blockquote element represents content that is quoted from another source, optionally with a citation which must be within a `footer` or `ci te` element, and optionally with in-line changes such as annotations and abbreviations.
 
 #### Blockquote without attribution
 
@@ -40,7 +41,7 @@ The blockquote element represents content that is quoted from another source, op
 
 #### Blockquote with attribution
 
-> Don't communicate by sharing memory, share memory by communicating.<br>
+> Don't communicate by sharing memory, share memory by communicating.<br />
 > — <cite>Rob Pike[^1]</cite>
 
 [^1]: The above quote is excerpted from Rob Pike's [talk](https://www.youtube.com/watch?v=PAAkCSZUG1c) during Gopherfest, November 18, 2015.
